# solana-empty-geyser-plugin

./: Cargo.toml  README.md  config.json  migration.sql  rust-toolchain.toml
client/: Cargo.toml
client/src/: cli.rs  main.rs  quic_connection.rs  skip_server_verification.rs
plugin/: Cargo.toml
plugin/src/: config.rs  lib.rs  plugin_error.rs  skip_client_verification.rs  tls_certificate.rs
