[package]
name = "geyser-empty-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Godmode Galactus"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "config-check"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = { workspace = true }
solana-geyser-plugin-interface = { workspace = true }

tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "time", "fs"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "=4.3.24", features = ["cargo", "derive"] }
anyhow = "1.0.70"

[build-dependencies]
anyhow = "1.0.62"
cargo-lock = "9.0.0"
git-version = "0.3.5"
vergen = { version = "8.2.1", features = ["build", "rustc"] }
